# k3dev

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  install.sh
.githooks/: commit-msg
.github/workflows/: build-assets.yml  ci.yml  release.yml
agent/: Cargo.toml
agent/src/: main.rs
assets/: socat-aarch64
configs/: k3dev.example.yml
docs/: CLI.md  CONFIGURATION.md  KEYBINDINGS.md
scripts/: build-agent.sh  build-assets.sh
src/: cli.rs  lib.rs  main.rs
src/app/: commands.rs  events.rs  messages.rs  mod.rs  refresh.rs
src/capture/: mod.rs  sidecar.rs  spec.rs
src/cluster/: config.rs  diagnostics.rs  docker.rs  ingress.rs  k3s.rs  kube_ops.rs  mod.rs  platform.rs  port_forward.rs  traefik.rs
src/cluster/docker/: mod.rs  pull_progress.rs  stats.rs  volumes.rs
src/cluster/k3s/: mod.rs  setup.rs  snapshots.rs  status.rs
src/commands/: executor.rs  info_exec.rs  mod.rs  types.rs  visibility.rs
src/config/: loader.rs  mod.rs  timeouts.rs  types.rs  validator.rs
src/config/validator/: checks.rs  mod.rs
src/hooks/: executor.rs
src/k8s/: client.rs  executor.rs  mod.rs  shell_session.rs  timeline.rs
src/keybindings/: mod.rs  resolver.rs
src/logging/: mod.rs
src/shell/: mod.rs  runner.rs
src/ui/: layout.rs  mod.rs  styles.rs  theme.rs
src/ui/components/: action_bar.rs  command_palette.rs  confirm_popup.rs  diagnostics_overlay.rs  help_overlay.rs  input_form.rs  menu.rs  mod.rs  output.rs  output_popup.rs  password_popup.rs  pod_context_menu.rs  pod_detail_panel.rs  pod_stats.rs  shell_view.rs  status_bar.rs
src/ui/components/menu/: mod.rs  render.rs
