[package]
name = "k3dev"
version = "0.1.0"
edition = "2021"
description = "TUI for local k3s cluster development"
authors = ["daylioti"]

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full", "process", "sync"] }
tokio-util = "0.7"

# Kubernetes
kube = { version = "0.97", features = ["client", "runtime", "ws"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dirs = "5"
regex = "1"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
which = "7"
x509-parser = "0.16"
pem = "3"

# Docker
bollard = "0.19"
tar = "0.4"
num_cpus = "1.17.0"
once_cell = "1.21.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
