[package]
name = "k3dev"
version = "0.1.0"
edition = "2021"
description = "TUI for local k3s cluster development"
authors = ["daylioti"]
license = "MIT"
repository = "https://github.com/daylioti/k3dev"
homepage = "https://github.com/daylioti/k3dev"
readme = "README.md"
keywords = ["k3s", "kubernetes", "docker", "tui", "devops"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-{ target-arch }{ binary-ext }"
bin-dir = "k3dev-linux-{ target-arch }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-x86_64"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-x86_64-musl"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-aarch64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-aarch64-musl"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full", "process", "sync"] }
tokio-util = "0.7"

# Kubernetes
kube = { version = "0.97", features = ["client", "runtime", "ws"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dirs = "5"
regex = "1"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
which = "7"
x509-parser = "0.16"
pem = "3"

# Docker
bollard = "0.19"
tar = "0.4"
num_cpus = "1.17.0"
once_cell = "1.21.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
