[package]
name = "k3dev"
version = "0.1.0"
edition = "2021"
description = "TUI for local k3s cluster development"
authors = ["daylioti"]
license = "MIT"
repository = "https://github.com/daylioti/k3dev"
homepage = "https://github.com/daylioti/k3dev"
readme = "README.md"
keywords = ["k3s", "kubernetes", "docker", "tui", "devops"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-{ target-arch }{ binary-ext }"
bin-dir = "k3dev-linux-{ target-arch }{ binary-ext }"
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-x86_64"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-x86_64-musl"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-aarch64"

[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-linux-aarch64-musl"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-macos-x86_64"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/k3dev-macos-aarch64"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.29"

# Async runtime
tokio = { version = "1", features = ["full", "process", "sync"] }
tokio-util = "0.7"

# Kubernetes
kube = { version = "3.1", default-features = false, features = ["client", "rustls-tls", "aws-lc-rs", "runtime", "ws"] }
k8s-openapi = { version = "0.27", features = ["v1_35"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
dirs = "6"
regex = "1"
futures = "0.3"
futures-util = "0.3"
chrono = "0.4"
which = "8"
x509-parser = "0.18"
pem = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "chrono"] }
tracing-appender = "0.2"

# Docker
bollard = "0.20"
tar = "0.4"
num_cpus = "1.17.0"
once_cell = "1.21.3"

# Cryptography (for snapshot config hashing)
sha2 = "0.10"

# HTTP client (for async health checks)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# Base64 encoding (for binary injection)
base64 = "0.22"

# Terminal emulation (for interactive pod shell)
vt100 = "0.16"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
